<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:background="@color/white_1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!--  CATEGORY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register_category_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_small"
                android:textColor="@color/text_color_black"
                android:layout_weight="2"
                android:text="@string/category" />
            <Spinner
                android:id="@+id/spn_bang_category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:nextFocusDown="@+id/register_bang_date" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white_1_1" />

        <!--DATE-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register_date_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_small"
                android:textColor="@color/text_color_black"
                android:layout_weight="2"
                android:text="@string/open_date" />
            <TextView
                android:id="@+id/register_bang_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                android:background="@drawable/bg_round"
                android:gravity="center_vertical|right"
                android:textColor="@color/primaryColorDark"
                android:hint="@string/click_me"/>
        </LinearLayout>

        <!-- TIME -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register_time_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_small"
                android:textColor="@color/text_color_black"
                android:layout_weight="2"
                android:text="@string/open_time" />
            <TextView
                android:id="@+id/register_bang_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:layout_weight="1"
                android:textColor="@color/primaryColorDark"
                android:gravity="center_vertical|right"
                android:hint="@string/click_me" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white_1_1" />
        <!-- ADR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/register_place_display"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_small"
                android:textColor="@color/text_color_black"
                android:layout_weight="2"
                android:text="@string/host_place" />

            <EditText
                android:id="@+id/display_adr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="@dimen/spacing_small"
                android:background="@drawable/bg_round"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:hint="@string/input_bang_adr"
                android:inputType="text"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white_1_1" />
        <!-- DESCRIPTION -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/child_margin_top"
            android:background="@drawable/bg_round">
            <EditText
                android:id="@+id/bang_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:fadeScrollbars="false"
                android:gravity="start"
                android:hint="@string/input_bestfood_description"
                android:lines="9"
                android:maxLength="500"
                android:overScrollMode="always"
                android:padding="@dimen/spacing_large"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textSize="@dimen/text_size_small2" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="60dp"
            android:background="#55AAAAAA" />

        <Button
            android:id="@+id/btn_bang_regi_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="保存"/>
      </LinearLayout>
</ScrollView>