<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/a_toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <!--  CATEGORY -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/register_category_display"
                    style="@style/customTextviewForDisplay"
                    android:layout_weight="2"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/bang_info_category"
                    style="@style/cstTvForInput"
                    android:layout_weight="1"
                    android:nextFocusDown="@+id/register_bang_date" />
            </LinearLayout>
            <TextView style="@style/horiLineMadeForTv" />

            <!--DATE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/register_date_display"
                    style="@style/customTextviewForDisplay"
                    android:layout_weight="2"
                    android:text="@string/open_date" />
                <TextView
                    android:id="@+id/bang_info_date"
                    style="@style/cstTvForInput"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"

                    android:textColor="@color/primaryColorDark" />
            </LinearLayout>

            <TextView style="@style/horiLineMadeForTv" />
            <!-- ADR-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/register_place_display"
                    style="@style/customTextviewForDisplay"
                    android:layout_weight="2"
                    android:text="@string/host_place" />
                <TextView
                    android:id="@+id/bang_info_place"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/spacing_small"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round"
                    android:gravity="center_vertical"

                    android:inputType="text"
                    android:textAlignment="center" />
            </LinearLayout>
            <TextView style="@style/horiLineMadeForTv" />

            <!-- DESCRIPTION -->

                <TextView
                    android:id="@+id/bang_info_contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:fadeScrollbars="false"
                    android:gravity="start"

                    android:lines="9"
                    android:maxLength="500"
                    android:overScrollMode="always"
                    android:padding="@dimen/spacing_large"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/text_size_small2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">
                <TextView
                    android:id="@+id/applied_cnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="申込数" />
                <TextView
                    android:id="@+id/show_applied_cnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>


